--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -10,7 +10,7 @@ Author: Anonymous
   <script>hljs.initHighlightingOnLoad();</script>
   <!-- Script Header for Code Language Selector in Algo Notes -->
 </head>
-{% include report-problem.html %}
+{% include component/report-problem.html %}
 {% include article-head.html %}
 
 <!-- Language Selector -->
