--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 comments: false
 Author: Anonymous
 ---
-{% include report-problem.html %}
+{% include component/report-problem.html %}
 {% include article-head.html %}
 
 {{ content }}
