Some minor update on CSS

--- a/_sass/homepage.sass
+++ b/_sass/homepage.sass
@@ -24,6 +24,7 @@
   &:hover
     color: ghostwhite
     background-position-x: left
+    box-shadow: 0 0 36px rgba(0, 0, 0 , 0.4)
 
     h1, h2, h3, h4, h5
       color: white
