--- a/_sass/search.sass
+++ b/_sass/search.sass
@@ -1,20 +1,26 @@
 input
   font-size: 1.3rem
-  padding: 0.6rem 0.6rem 0.6rem 1.26rem
+  padding: 0.6rem 0.6rem 0.2rem 0
   width: 100%
   outline-style: none
-  border: solid 2px #13227a
-  border-radius: 1.26rem
-  margin-bottom: 1.5rem
+  margin-bottom: 1rem
+  border-bottom: solid 2px grey
+  border-top: none
+  border-left: none
+  border-right: none
+  min-width: 300px
 
 select
   font-size: 1.3rem
-  padding: 0.6rem 0.6rem 0.6rem 1.26rem
+  padding: 0.6rem 0.6rem 0.2rem 0
   width: 100%
   outline-style: none
-  border: solid 2px #13227a
-  border-radius: 1.26rem
-  margin-bottom: 1.5rem
+  margin-bottom: 1rem
+  border-bottom: solid 2px grey
+  border-top: none
+  border-left: none
+  border-right: none
+  min-width: 300px
 
 ul[id="results-container"]
   li
