Remove Baidu Statistics, boost website respond speed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,6 @@
 
   <!-- Script Header for Table of Content Area -->
 
-  {% include thirdParty/baidu-Statistics.html %}
+  <!--{% include thirdParty/baidu-Statistics.html %}-->
   {% include thirdParty/mathJax.html %}
 </head>
