Update AtCoder E 206, Reduce max-width of #category, Remove Other-analysis tag

--- a/_sass/personalize.sass
+++ b/_sass/personalize.sass
@@ -149,7 +149,7 @@
     margin-top: 32px
     margin-left: 24px
     margin-right: 24px
-    width: 20%
+    max-width: 15%
 
 #category
   overflow-y: auto
