Add History Review Button

--- a/_includes/article-head.html
+++ b/_includes/article-head.html
@@ -17,6 +17,11 @@
         style="display: flex; flex-direction: row-reverse; justify-content: space-between;"
     >
         <div style="display: flex;">
+        <img src="{{ site.baseurl }}/assets/icon_db/history.svg"
+            height="30px"
+            style="margin: 1rem 1rem 0 1rem; cursor:pointer;"
+            onclick="window.location.href='https://github.githistory.xyz/MarkChenYutian/gwcsclub/blob/main/{{ page.path }}'"
+        />
         <img src="{{ site.baseurl }}/assets/home.svg" 
             height="30px" 
             style="margin: 1rem 1rem 0 1rem; cursor:pointer;"
