--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,26 +1,5 @@
-<!DOCTYPE html>
-<html lang="{{ site.locale }}">
-  
-  {% include head.html %}
+---
+layout: default
+---
 
-  <body>
-    {% include page-header.html %}
-    {% include nav-bar.html %}
-    {% if page.useTOC != false %}
-      {% include thirdParty/page-toc.html %}
-    {% endif %}
-
-    {% if page.useTOC != false %}
-    <section class="main-content">
-    {% else %}
-    <section class="main-content" style="max-width: none;">
-    {% endif %}
-          
-        {% include article-head.html %}
-        {{ content }}
-
-    </section>
-
-    {% include page-footer.html %}
-  </body>
-</html>
+{{ content }}
