--- a/css/normalize.css
+++ b/css/normalize.css
@@ -8,6 +8,7 @@
  @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
  /* imported url for link animations */
 html {
+  scroll-behavior: smooth;
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
