Improve grid view, maximize content area

--- a/_sass/personalize.sass
+++ b/_sass/personalize.sass
@@ -39,17 +39,6 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3)
     text-decoration: none
 
-/* Below Define the style for top Navigation Bar
-/* A Flex Container for Top Nav Box
-
-@media screen and (max-width: 700px)
-  .nav-button
-    padding: 5px 15px
-
-@media screen and (min-width: 700px)
-  .nav-button
-    padding: 15px 45px
-
 /* Image Style with Padding
 
 .mainPage-img
@@ -178,3 +167,8 @@ summary
 .main-container
   display: grid
   grid-template-columns: [l-border] 80% [mid-border] 20% [r-border]
+
+.page-toc
+  position: sticky
+  align-self: start
+  overflow-x: hidden
