--- a/css/cayman.css
+++ b/css/cayman.css
@@ -73,19 +73,22 @@ a.tag:hover { background-color: #015d9b; color: ghostwhite; }
 .nav-button { background: transparent; margin-bottom: 5px; text-align:center; cursor:pointer; flex-grow: 1; flex-basis: calc(100% / 5 - 5px); font-weight: bold; font-family: 'Microsoft YaHei','微软雅黑'; }
 .nav-button:hover { background: linear-gradient(to right, transparent 30%, #185792 30%, #3277b8 70%, transparent 70%) 0 100% / 100% 5px no-repeat; color: #3277b8; margin-bottom: 0; }
 
-.main-content { word-wrap: break-word; }
+.main-content { word-wrap: break-word; place-self: stretch; }
 .main-content :first-child { margin-top: 0; }
 @media screen and (min-width: 72em) {
-   .main-content { max-width: 72rem; padding: 2rem 6rem; margin: 10px auto 20px auto; font-size: 1.1rem; }
+   .main-content {padding: 2rem 6rem; font-size: 1.1rem; }
    .nav-button {font-size: 1.2rem; padding: 1.1rem 0;}
+   .page-toc { top: 3rem; }
   }
 @media screen and (min-width: 48em) and (max-width: 72em) {
    .main-content { padding: 2rem 4rem; font-size: 1.1rem; }
    .nav-button {font-size: 1.1rem; padding: 1rem 0;}
+   .page-toc { top: 3rem; }
   }
 @media screen and (max-width: 48em) {
    .main-content { padding: 2rem 1rem; font-size: 1rem; }
    .nav-button {font-size: 1rem; padding: 0.8rem 0;}
+   .page-toc { top: 2rem; }
   }
 .main-content img { max-width: 100%; display:block; margin: 0 auto;}
 
