Update responsive TOC, Add hover effect, remove redundant article header

--- a/_sass/personalize.sass
+++ b/_sass/personalize.sass
@@ -172,3 +172,14 @@ summary
   position: sticky
   align-self: start
   overflow-x: hidden
+  overflow-y: auto
+  max-height: 90vh
+  a
+    color: #333333
+    padding-bottom: 0.3rem
+    display: block
+    font-size: large
+  
+  a:hover
+    text-decoration: none
+    font-weight: bold
