--- a/css/cayman.css
+++ b/css/cayman.css
@@ -78,17 +78,17 @@ a.tag:hover { background-color: #015d9b; color: ghostwhite; }
 @media screen and (min-width: 72em) {
    .main-content {padding: 2rem 6rem; font-size: 1.1rem; }
    .nav-button {font-size: 1.2rem; padding: 1.1rem 0;}
-   .page-toc { top: 3rem; }
+   .page-toc { top: 4.5rem; }
   }
 @media screen and (min-width: 48em) and (max-width: 72em) {
    .main-content { padding: 2rem 4rem; font-size: 1.1rem; }
    .nav-button {font-size: 1.1rem; padding: 1rem 0;}
-   .page-toc { top: 3rem; }
+   .page-toc { top: 4.5rem; }
   }
 @media screen and (max-width: 48em) {
-   .main-content { padding: 2rem 1rem; font-size: 1rem; }
+   .main-content { padding: 2rem 1rem; font-size: 1rem; width: 99vw; }
    .nav-button {font-size: 1rem; padding: 0.8rem 0;}
-   .page-toc { top: 2rem; }
+   .page-toc { display: none; }
   }
 .main-content img { max-width: 100%; display:block; margin: 0 auto;}
 
