Move all @media query to reactive_layout.sass to manage uniformly

--- a/_sass/personalize.sass
+++ b/_sass/personalize.sass
@@ -177,9 +177,18 @@ summary
   a
     color: #333333
     padding-bottom: 0.3rem
+    margin-left: 5px
     display: block
     font-size: large
   
   a:hover
+    margin-left: 0
     text-decoration: none
     font-weight: bold
+    border-left: grey solid 5px
+
+.toc-active
+    margin-left: 0
+    text-decoration: none
+    font-weight: bold
+    border-left: grey solid 5px
