Standardize SASS Size controler with rem unit in variable.sass

--- a/_sass/algo_note.sass
+++ b/_sass/algo_note.sass
@@ -1,8 +1,9 @@
-/*纵向时间轴
+@import variables
+
 .time-vertical
   list-style-type: none
   border-left: 4px solid rgb(197, 227, 251)
-  padding: 8px 0px 8px 0px
+  padding: $padding-xs 0 $padding-xs 0
 
   li
     position: relative
