--- a/_sass/homepage.sass
+++ b/_sass/homepage.sass
@@ -1,3 +1,5 @@
+@import Variables
+
 .horizontal-flex-box
   display: flex
   display: -webkit-flex
@@ -12,32 +14,27 @@
   width: calc(100% / 3 - 2rem)
   min-height: 200px
   min-width: 400px
-  margin: 1rem
-  margin-top: 1rem !important
-  border-radius: 10px
-  padding: 20px
-  box-shadow: 0 0 36px rgba(0, 0, 0 , 0.1)
+  margin: $padding-ms
+  margin-top: $padding-ms !important
+  border-radius: $padding-xs
+  padding: $padding-m
+  box-shadow: 0 0 $padding-l rgba(0, 0, 0 , 0.1)
   background: no-repeat (right / 400%) linear-gradient(to left, white 0%, white 25%, #2685DF 75%, #195893 100%)
   cursor: pointer
   transition: 0.2s
-
   &:hover
     color: ghostwhite
     background-position-x: left
     box-shadow: 0 0 36px rgba(0, 0, 0 , 0.4)
-
     h1, h2, h3, h4, h5
       color: white
-
   p
     flex-basis: 60%
     flex-grow: 1
 
 .pop-card
   transition: 0.2s
-
   &:hover
-    transform: translateY(-1rem)
-
+    transform: translateY(-$padding-ms)
     ~ .pop-card
       transform: translateX(13.5rem)
