--- a/_sass/variables.sass
+++ b/_sass/variables.sass
@@ -1,6 +1,6 @@
 // Reactive Layout Breakpoints
-$screen-l: 72em
-$screen-s: 56em
+$screen-l: 72rem
+$screen-s: 56rem
 
 //Size Variables 
 //Part 0: Font-size Variable
