Responsive Layout, Reactive TOC

--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -3,5 +3,5 @@
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/03/04/notes.html'">笔记</div>
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/Competitions.html'">竞赛</div>
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/04/12/Search.html'">页面搜索</div>
-    <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/About-Us.html'">关于我们</div>
+    <div class="nav-button only-display-at-large" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/About-Us.html'">关于我们</div>
 </section>
