--- a/_sass/personalize.sass
+++ b/_sass/personalize.sass
@@ -114,7 +114,7 @@ summary
   overflow-y: auto
   max-height: 90vh
   a
-    color: #666666
+    color: #777777
     padding-bottom: $padding-xxs
     margin-left: $padding-xxs
     display: block
@@ -125,3 +125,10 @@ summary
     text-decoration: none
     font-weight: bold
     border-left: grey solid $padding-xxs
+
+.active-toc
+  color: #333333 !important
+  margin-left: 0 !important
+  text-decoration: none
+  font-weight: bold
+  border-left: grey solid $padding-xxs
