Move TOC from right-hand-side to left-hand-side

--- a/_sass/personalize.sass
+++ b/_sass/personalize.sass
@@ -1,5 +1,17 @@
 @import variables
 
+.simple-card
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1)
+  transition: 0.3s
+  padding: 10px
+  margin: 20px 0
+  border-radius: 3px
+  cursor: pointer
+  animation: fadeIn 1s ease
+  &:hover
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3)
+    text-decoration: none
+
 .main-button
   cursor: pointer
   background-color: rgb(243, 247, 255)
